# manim-arcface

./: .gitignore  PLAN.md  README.md  generate_manim_scenes.py  narration.csv  prompt_tmp  render_all_scenes.py  render_with_voice.py  setup.cfg
Tex/: 11dec4a4f0516fb9.tex  4416bcc6f927afcb.tex  4d6bf662df4c2997.tex  6e720352d5ddf154.tex  970be5177ada92e1.tex  99f077570060bad1.tex  9bc02d89876a3269.tex  b9d86274852e9c4a.tex  c0a5e753b95030ca.tex  df7c3b43ffb21c29.tex  f97406372b771b71.tex  fd20f403aef2ba44.tex
manimlib/: __init__.py  config.py  default_config.yml  logger.py  tex_templates.yml
scenes/: scene00_introduction.py  scene01_human_vs_computer.py  scene01_pipeline.py  scene02_challenges.py  scene02_face_recognition_pipeline.py  scene03_challenges.py  scene03_embedding_space.py  scene04_challenges_why_accuracy_matters.py  scene04_embedding_space.py  scene04_embedding_space_1.py  scene04_softmax.py  scene05_challenges_transition.py  scene05_evolution.py  scene05_softmax.py  scene06_arcface_core.py  scene06_arcface_mechanism.py  scene06_embedding_space_city_map_analogy.py  scene07_arcface_vs_cosface.py  scene07_closing.py  scene07_embedding_space_embedding_concept.py  scene08_closing.py  scene08_embedding_space_transition.py  scene09_softmax_loss_function_introduction.py  scene10_softmax_concept.py  scene11_softmax_limitation.py  scene12_evolution_milestones.py  scene13_transition.py  scene14_arcface_core_abstract_introduction.py  scene15_arcface_core_why_angle.py  scene16_arcface_core_2d_visual_comparison.py  scene17_arcface_core_transition.py  scene19_formula.py  (+12 more)
(+4 files in other folders)
